--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :rootdir: .
 :imagesdir: {rootdir}/images
-:numbered:
+//:numbered:
 :tip-caption: :bulb:
 :note-caption: :information_source:
 :important-caption: :heavy_exclamation_mark:
@@ -16,7 +16,7 @@ endif::[]
 
 `arrayp` is a utility module which provides functions for manipulating collections of JavaScript `Promise` objects.
 
-toc::[]
+//toc:Iu:[]
 
 == Install
 Install with `npm`.
@@ -30,7 +30,7 @@ $ npm install arrayp --save
 const arrayp = require('arrayp');
 ```
 
-=== How `arrayp` Uses Collections
+=== About `arrayp` Collections
 `arrayp` methods operate on JavaScript collections which can contain literals, objects or functions. Before a collection item is used, it converted to a promise. Methods use the `Promise` objects by asynchronously waiting for an item's result (or error). In one sense, the collection can be viewed as containing tasks which are executed by `arrayp` methods.
 
 Collection items are converted to `Promise` objects in the following manner:
@@ -41,13 +41,39 @@ Collection items are converted to `Promise` objects in the following manner:
 
 == Methods
 
-=== `tryEach(array)`
+=== `chain(array) : Promise`
+
+```javascript
+const {chain} = require('arrayp');
+```
+Runs each item of the array in series and returns a `Promise` which resolves with the value returned by the last item of the array. Each item in the array passes its result to the next. If any of the items rejects with an error, the next item is not executed and the function rejects with the same error.
+
+==== Arguments
+* `array`: The collection of items to execute.
+
+==== Returns
+* `Promise`: Resolves with the value of the last item of the array, or rejects with the first error encountered.
+
+```javascript
+arrayp.chain( [
+  ( x ) => 1,
+  ( x ) => new Promise(
+    ( resolve ) => setTimeout(
+      () => resolve( x + 1 ), 250 ) ),
+  ( x ) => x * 3,
+  ( x ) => Promise.resolve( x - 4 ),
+] ).then( console.log );
+
+//output: 2
+```
+
+=== `first(array)`
 
 ```javascript
 const {tryEach} = require('arrayp');
 ```
 
-Runs each `Promise` in the series. It stops at the first `Promise` that resolves successfully and returns a promise which resolves to that value. If all promises fail, it returns a promise which is rejected with the error returned by the final item in the series.
+Runs each item of the array in series and returns a `Promise`. It stops at the first `Promise` that resolves successfully and the returned `Promise` resolves to that value. If all items in the array reject with errors, the returned `Promise` is rejected with the error returned by the final item in the series.
 
 ==== Parameters
 [cols="2,3,10", options="header"]
