--- a/README.adoc
+++ b/README.adoc
@@ -41,15 +41,19 @@ Collection items are converted to `Promise` objects in the following manner:
 
 == Methods
 
-=== `chain(array [, initial]) : Promise`
+=== `chain(iterable [, initial]) : Promise`
 
 ```javascript
 const {chain} = require('arrayp');
 ```
-Runs each item of the array in series and returns a `Promise` which resolves with the value returned by the last item of the array. Each item in the array passes its result to the next. If any of the items rejects with an error, the next item is not executed and the function rejects with the same error.
+The `chain` method evaluates each promise in the iterable in series and returns a `Promise` that resolves with the value from the last item in the iterable, or rejects with the reason from the first item in the iterable that rejects.
 
-==== Arguments
-* `*array*` `Array | Iterable` - The collection of items to execute.
+The value from one item in the iterable is passed as an argument to the next item. This is meaningful only when the next item is a function (similar to a `onFulfilled` handler of the `Promise.then()` method).
+
+The optional `initial` value to the `chain` method will be passed to the first promise of the iterable.
+
+==== Parameters
+* `*array*` - An iterable footnote:[iterable,  The collection of items to execute.]
 * `*initial*` `_(*)_` - Optional value passed to the first item.
 
 ==== Returns
