--- a/README.adoc
+++ b/README.adoc
@@ -50,14 +50,14 @@ The `chain` method evaluates each promise in the iterable in series and returns 
 
 The value from one item in the iterable is passed as an argument to the next item. This is meaningful only when the next item is a function (similar to a `onFulfilled` handler of the `Promise.then()` method).
 
-The optional `initial` value to the `chain` method will be passed to the first promise of the iterable.
+An optional `initial` value to the `chain` method will be passed to the first promise of the iterable.
 
 ==== Parameters
-* `*array*` - An iterable footnoteref:[iterable, The https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/iterable[iterable] protocol allows JavaScript objects to define or customize their iteration behavior, such as what values are looped over in a for..of construct. ]
+* `*array*` - An iterable object, such as an `Array`.footnoteref:[iterable, The https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/iterable[iterable] protocol allows JavaScript objects to define or customize their iteration behavior, such as what values are looped over in a for..of construct. ]
 * `*initial*` `_(*)_` - Optional value passed to the first item.
 
 ==== Returns
-* `*Promise*` which resolves with the value of the last item of the array, or rejects with the first error encountered.
+A pending `https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise]` that resolves with the value of the last item of the array, or rejects with reason of the first rejecting item in the iterable. 
 
 ```javascript
 arrayp.chain( [
