--- a/README.adoc
+++ b/README.adoc
@@ -58,14 +58,7 @@ Collection items are converted to `Promise` objects in the following manner:
 == Methods
 
 === chain(iterable [, initial]) : Promise
-
-```javascript
-const {chain} = require('arrayp');
-```
-
-`chain` evaluates each promise in the iterable in series and returns a `Promise` that resolves with the value from the last item in the iterable, or rejects with the reason from the first item in the iterable that rejects. The value from one item in the iterable is passed as an argument to the next item. An optional `initial` value to the `chain` method will be passed to the first promise of the iterable.
-
-NOTE: Passing the previous value to the next item is meaningful only when the next item is a function.
+Evaluates each promise in the iterable in series and returns a `Promise` that resolves with the value from the last item in the iterable, or rejects with the reason from the first item in the iterable that rejects. The value from one item in the iterable is passed as an argument to the next item. An optional `initial` value to the `chain` method will be passed to the first promise of the iterable.
 
 ==== Parameters
 * `*array*` An iterable object, such as an `Array`.
@@ -85,6 +78,12 @@ This method can be useful for chaining multiple promises.
 If an iterable item rejects, `chain` asynchronously rejects with the rejection reason. Subsequent items in the iterable are not processed.
 
 ==== Examples
+
+```javascript
+arrayp.chain( [1,2,3,4,5] ).then( console.log );
+
+//output: 5
+```
 
 ```javascript
 arrayp.chain( [
@@ -113,36 +112,44 @@ Promise
 //output: 2
 ```
 
-=== `series(iterable)`
+=== series(iterable) : Promise
+Evaluates each promise in the iterable in _series_ and returns a `Promise` that resolves with array containing all the resolved values of the iterable passed as argument. It rejects with the reason of the first promise that rejects.
 
-
-=== `first(array)`
-
-```javascript
-const {tryEach} = require('arrayp');
-```
-
-Runs each item of the array in series and returns a `Promise`. It stops at the first `Promise` that resolves successfully and the returned `Promise` resolves to that value. If all items in the array reject with errors, the returned `Promise` is rejected with the error returned by the final item in the series.
-
-==== Arguments
-* `*array*` `Array | Iterable` - The collection of items to execute.
+==== Parameters
+* `*array*` An iterable object, such as an `Array`.
 
 ==== Returns
-* `*Promise*` which resolves with the value of the first successful item of the array, or rejects with the error of the last item.
+* An already resolved Promise if the iterable passed is empty.
+* In all other cases, a pending `https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise]` that resolves with array containing all the resolved values when all items in the given iterable have been resolved.
 
-==== Example
+==== Description
+This method can be useful for chaining multiple promises.
+
+===== Fulfilment
+* If an empty iterable is passed, this method returns (synchronously) an already resolved promise.
+* In all other cases, the promise returned by `chain` is fulfilled asynchronously.
+
+===== Rejection
+If an iterable item rejects, `chain` asynchronously rejects with the rejection reason. Subsequent items in the iterable are not processed.
+
+==== Examples
 
 ```javascript
-arrayp.tryEach([
-  Promise.reject('not this'),
-  () => {throw new Error('not this either')},
-  'this one',
-  "shouldn't get here"
-]).then(console.log);
+arrayp.series( [1,2,3,4,5] ).then( console.log );
 
-//output: this one
+//output: [1,2,3,4,5]
 ```
 
+```javascript
+arrayp.series( [
+  1,
+  () => new Promise( ( resolve ) => setTimeout( () => resolve( 2 ), 250 ) ),
+  () => 3,
+  () => Promise.resolve( 4 ),
+  Promise.resolve( 5 ),
+] ).then( console.log );
 
+//output: [1,2,3,4,5]
+```
 
 === `parallel(array [, limit])`
