--- a/README.adoc
+++ b/README.adoc
@@ -12,6 +12,15 @@ endif::[]
 :toc:
 :toc-placement!:
 
++++
+<style>
+#user-content-toctitle {
+  display: none;
+  visibility: hidden;
+}
+</style>
++++
+
 = arrayp
 
 Functions for manipulating collections of JavaScript ((`Promise`)) objects.
