--- a/README.adoc
+++ b/README.adoc
@@ -151,12 +151,29 @@ arrayp.series( [
   () => 3,
   () => Promise.resolve( 4 ),
   Promise.resolve( 5 ),
-] ).then( console.log );
+  console.log
+]);
 
 //output: [1,2,3,4,5]
 ```
 
 == parallel(array, [limit])
+`parallel` evaluates up to `limit` items from the iterable in _parallel_ and returns a single Promise that resolves when all of the promises in the iterable argument have resolved. It rejects with the reason of the first promise that rejects. If `limit` is not specified, all items will be evaluated in parallel (like `Promise.all()`).
+
+=== Parameters
+* `*array*` An iterable object, such as an `Array`.
+* `limit` {Integer} a positive integer limiting the tasks to be evaluated in parallel.
+
+=== Returns
+* An already resolved Promise if the iterable passed is empty.
+* In all other cases, a pending `https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise]` that resolves with array containing all the resolved values when all items in the given iterable have been resolved.
+
+==== Fulfilment
+* If an empty iterable is passed, this method returns (synchronously) an already resolved promise.
+* In all other cases, the promise returned by `parallel` is fulfilled asynchronously.
+
+==== Rejection
+If an iterable item rejects, `parallel` asynchronously rejects with the rejection reason. Subsequent items in the iterable are not processed.
 
 === Examples
 
@@ -236,3 +253,4 @@ Output:
 ```
 
 == run(array, [limit])
+Like `parallel`, but does not reject if array items reject. Returns a `Promise` which resolves with the values or reasons of the array items.
